Got HTML Box Functioning Again
Updated (cleaned up) files to make a bootstrap grid appear on page
Can click box and console.log() shows the box's ID

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,5 +1,12 @@
 @import '~bootstrap/scss/bootstrap';
 
-#gameboard-wrapper {
-  width: 50vw
+.container {
+  width: 50vw;
+  height: 50vh;
+}
+
+.box {
+  border: 1px solid #000;
+  height: 10em;
+  width: 10em;
 }
