Added functionality to auto-switch players - only after them make a valid move

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,12 +1,12 @@
 @import '~bootstrap/scss/bootstrap';
 
 .container {
-  width: 50vw;
-  height: 50vh;
+  width: 660px;
+  height: 660px;
 }
 
 .box {
   border: 1px solid #000;
-  height: 10em;
+  height: 200px;
   width: 10em;
 }
