Added message box to replace "win check" button
- Now automatically checks for winner
- Replaced "check win" button with message box

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -10,3 +10,14 @@
   height: 200px;
   width: 10em;
 }
+
+#message {
+  border: 1px solid #000;
+  background: #aaa;
+  width: 660px;
+  padding: 1em;
+  margin: 0 auto;
+  color: #909;
+  font-size: 1.5em;
+  text-align: center;
+}
