Added on-screen alerts for user
- Div for #current-player displays current player during gameplay
- #current-player only appears when a game is in-play
- Div for #message displays warning only during current move:
  -- Invalid Move (already taken)
  -- Game Over (_____ wins)
  -- Game Over (draw game)
- #messages clear before any valid move is taken

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -17,20 +17,17 @@ h1 {
 }
 
 #message {
-  border: 1px solid #000;
-  background: #aaa;
   width: 660px;
-  padding: 1em;
+  padding: 1em 0;
   margin: 0 auto;
-  color: #909;
-  font-size: 1.5em;
+  color: #000;
   text-align: center;
 }
 
 #current-player {
-  margin: 0 auto;
-  text-align: center;
   width: 660px;
   padding: 1em 0;
+  margin: 0 auto;
   color: #fff;
+  text-align: center;
 }
