--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,11 +1,23 @@
 @import '~bootstrap/scss/bootstrap';
+body {
+  width: 80vw;
+}
 
 h1 {
   text-align: center;
   padding: 1em 0;
 }
 
-.login {
+.button-wrapper {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  width: 660px;
+  align-items: center;
+  justify-content: center;
+}
+
+.authentication, .games-display {
   width: 660px;
   margin: 1em auto;
   padding: .5em;
@@ -19,10 +31,17 @@ h1 {
 }
 
 .box {
+  display: flex;
   border: 1px solid #000;
   height: 200px;
-  width: 10em;
   text-align: center;
+}
+
+.messages {
+  width: 660px;
+  margin: .1em auto;
+  padding: .1em;
+  background-color: #CCE5FF;
 }
 
 .failure {
@@ -51,6 +70,14 @@ h1 {
   width: 660px;
   padding: 1em 0;
   margin: 0 auto;
-  color: #fff;
+  color: #000;
+  text-align: center;
+}
+#game-data-display {
+  border: 1px solid #000;
+  width: 660px;
+  padding: 1em 0;
+  margin: 0 auto;
+  color: #000;
   text-align: center;
 }
