--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,6 +1,24 @@
 @import '~bootstrap/scss/bootstrap';
+@import url('https://fonts.googleapis.com/css?family=Fredericka+the+Great|Josefin+Slab&display=swap');
+
+$sage-dark: #97B2B5;
+$sage-light: #e1e9ea;
+$cream: #fdffe2;
+$blue-dark: #264c59;
+$green-success-background: #d4edda;
+
+
 body {
-  width: 80vw;
+  width: 100vw;
+  background-color: $sage-dark;
+  font-family: 'Josefin Slab', sans-serif;
+  align-self: center;
+  color: $blue-dark;
+}
+
+header {
+  font-family: 'Fredericka the Great', serif;
+  font-size: 6em;
 }
 
 h1 {
@@ -8,33 +26,47 @@ h1 {
   padding: 1em 0;
 }
 
-
-
-.authentication, .games-display {
-  width: 660px;
-  margin: 1em auto;
-  padding: .5em;
-  background-color: #e8e8e8;
-  border: 1px solid #000;
+section {
+  margin: 0 .5em;
 }
 
-.container {
-  width: 660px;
-  height: 660px;
+legend {
+  font-family: 'Fredericka the Great', serif;
+}
+
+button {
+  background-color: $green-success-background;
+}
+
+.row {
+  margin: 0 auto;
+  padding: 1em 0;
+}
+
+#game-area .row {
+  padding: 0;
+}
+
+.authentication, .games-display {
+  display: flex;
+  margin: 1em auto;
+  padding: .5em;
+  background-color: $sage-light;
 }
 
 .box {
-  display: flex;
-  border: 1px solid #000;
+  border: 1px solid $sage-dark;
+  background-color: $cream;
   height: 200px;
+  width: 200px;
   text-align: center;
+  justify-content: center;
 }
 
-.messages {
-  width: 660px;
+.message {
   margin: .1em auto;
   padding: .1em;
-  background-color: #CCE5FF;
+  background-color: $sage-dark;
 }
 
 .failure {
@@ -43,7 +75,7 @@ h1 {
 }
 
 .success {
-  background-color: #d4edda;
+  background-color: $green-success-background;
   color: #2c693a;
 }
 
@@ -51,35 +83,22 @@ h1 {
   display: none;
 }
 
-.button-wrapper {
-  display: flex;
-  flex-direction: column;
-  margin: 0 auto;
-  width: 660px;
-  align-items: center;
-  justify-content: center;
-}
-
 #game-message {
-  width: 660px;
   padding: 1em 0;
   margin: 0 auto;
-  color: #000;
   text-align: center;
 }
 
 #current-player {
-  width: 660px;
   padding: 1em 0;
   margin: 0 auto;
   color: #000;
   text-align: center;
 }
+
 #game-data-display {
-  border: 1px solid #000;
-  width: 660px;
+  border: 1px solid $sage-dark;
   padding: 1em 0;
   margin: 0 auto;
-  color: #000;
   text-align: center;
 }
